--- a/index.html
+++ b/index.html
@@ -8,13 +8,53 @@
   </head>
   <body>
     <form class="form-todo">
-      <label class="form-todo-label"> Title ToDo <input class="form-todo-title" type="text" name="title" /> </label>
+      <label class="form-todo-label">
+        Title ToDo <input class="form-todo-title" type="text" name="title" />
+      </label>
       <label class="form-todo-label">
         Description ToDo
-        <textarea class="form-todo-description" name="description" cols="30" rows="10"></textarea>
+        <textarea
+          class="form-todo-description"
+          name="description"
+          cols="30"
+          rows="10"
+        ></textarea>
       </label>
       <button class="form-todo-sabmit" type="submit">Add</button>
     </form>
+    <ul class="list">
+      <li class="list-item">
+        <h2 class="list-item-title"></h2>
+        <p class="list-item-description"></p>
+      </li>
+      <!-- <li class="list-item">
+        <h2 class="list-item-title">Title</h2>
+        <p class="list-item-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          facilis consequatur tempore magni magnam dolores vitae harum expedita
+          non, voluptatem quibusdam quod totam dignissimos excepturi omnis
+          reprehenderit sequi aperiam eos.
+        </p>
+      </li>
+      <li class="list-item">
+        <h2 class="list-item-title">Title</h2>
+        <p class="list-item-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          facilis consequatur tempore magni magnam dolores vitae harum expedita
+          non, voluptatem quibusdam quod totam dignissimos excepturi omnis
+          reprehenderit sequi aperiam eos.
+        </p>
+      </li>
+      <li class="list-item">
+        <h2 class="list-item-title">Title</h2>
+        <p class="list-item-description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          facilis consequatur tempore magni magnam dolores vitae harum expedita
+          non, voluptatem quibusdam quod totam dignissimos excepturi omnis
+          reprehenderit sequi aperiam eos.
+        </p>
+      </li> -->
+    </ul>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
