--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <button class="form-todo-sabmit" type="submit">Add</button>
     </form>
     <ul class="list">
-      <li class="list-item">
+      <!-- <li class="list-item">
         <h2 class="list-item-title"></h2>
         <p class="list-item-description"></p>
-      </li>
+      </li> -->
       <!-- <li class="list-item">
         <h2 class="list-item-title">Title</h2>
         <p class="list-item-description">
