--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       </label>
       <button class="form-todo-sabmit" type="submit">Add</button>
     </form>
+    <label class="filter">
+      Title
+      <input class="filter-title" type="text">
+    </label>
+    
     <ul class="list">
       <!-- <li class="list-item">
         <h2 class="list-item-title"></h2>
